examples/test/testpolicy2491.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2491
  namespace: namespace157
spec:
  podSelector:
    matchLabels:
      key43: value21
      key19: value14
      key3: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value36
          key19: value13
          key38: value34
      podSelector:
        matchLabels:
          key10: value23
